# intelrealsense-d435i

./: CMakeLists.txt  CMakeSettings.json  README.md
CMake/: find_realsense2.cmake
src/: CMakeLists.txt  hello_lrs.cpp  rs-capture.cpp  rs-capture.hpp  test_lrs.cpp
